Wed Dec 20 16:16:03 UTC 2006  Ciju John  <johnc@ociweb.com>

        * tests/DCPS/Serializer/SerializerTest.cpp:
          Extra set of paranthesis needed to remove gcc warning.

Tue Dec 19 22:09:09 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/TransportQueueElement.inl:

          Fixed compilation errors that return a value to a void return
          function.

Tue Dec 19 17:59:01 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkCleanupTask.h:
        * dds/DCPS/transport/framework/DataLinkCleanupTask.cpp:

          Fixed an include file dependency problem on vc71 DOC build.

Tue Dec 19 16:53:06 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/Reconnect/subscriber.cpp:

          Made subscriber wait for 5 seconds (>passive_reconnect_duration)
          to give transport time to detect the connection lost due to
          backpressure timeout before shutdown the datareader. This should fix
          the bp_timeout test failure on not receiving the subscription lost
          callback.

Tue Dec 19 15:58:47 UTC 2006  Ciju John  <johnc@ociweb.com>

        * dds/DdsDcpsInfrastructure.idl:
	  Include a TAO IDL to bypass a vc71/vc8/intel c++ issue with base
          template export.

Mon Dec 18 18:10:11 UTC 2006  Ciju John  <johnc@ociweb.com>

        * tests/DCPS/FooTest5_0/main.cpp:
	  Add missing header file.

Fri Dec 15 22:24:07 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * dds\DCPS\DomainParticipantImpl.cpp:

          Made the topic object reference removed from map after deactivated
          from poa.  This would fix access violation in FooTest5 (during
          DomainParticipantImpl::delete_contained_entities()).

Fri Dec 15 18:11:14 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * performance-tests\DCPS\SimpleLatency\sample_pub.cpp:
        * performance-tests\DCPS\SimpleLatency\sample_sub.cpp:
        * tests\DCPS\FooTest5_0\main.cpp: